array.island.Island.scala.error
Compilation error:
Island:13: error: reassignment to val
    if(x=0){
        ^